# PipeTUI

./: .gitignore  Dockerfile  LICENSE  README.md  devops.db  main.py  pyproject.toml
cli/: alert_commands.py  command_handler.py  dashboard_commands.py  docker_commands.py  main.py  pipeline_commands.py  project_commands.py
core/: config.py  event_bus.py
docs/: pipetui.1
plugins/: base_plugin.py  docker_plugin.py  git_plugin.py  plugin_manager.py
services/: alert_service.py  build_service.py  deploy_service.py  log_service.py  monitor_service.py  pipeline_service.py  project_service.py
storage/: database.py
utils/: dashboard.py  helpers.py
